# MobileNetSSD_NCNN

./: CMakeLists.txt  README.md  main.cpp
kitti_model/: mobilenet.param
